# RawFrame

./: CMakeLists.txt  LICENSE  README.md  tem.patch
.github/workflows/: cmake-single-platform.yml
examples/: example_blur.c  example_convert.c  example_copy.c  example_ppm.c  image_copy.c
include/: raw_frame.h
include/img/: img.h  img_convert.h  img_format.h  img_processing.h
include/io/: img_io.h
src/core/: img.c  img_convert.c  img_format.c
src/io/: bmp_reader.c  bmp_writer.c  ppm_reader.c  ppm_writer.c
src/processing/: img_blur.c  img_copy.c
tests/: test_blur.c  test_img_convert.c  test_io.c  test_nv12.c
